// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewPinPopover > renders correctly 1`] = `
<shiftview-popover-stub
  arearrowsenabled="false"
  canmoveleft="false"
  canmoveright="false"
  class="shiftview-pin-popover"
  data-v-bea15349=""
  disabled="false"
  dotcolor=""
  itemdisabled="[Function]"
  itemicon="[Function]"
  itemiconcolor="[Function]"
  items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  itemtext="[Function]"
  subtitle="12:00"
  targetel="[object HTMLDivElement]"
  title="Multiple events (6)"
  titleclass=""
  titleicon=""
/>
`;

exports[`ShiftviewPinPopover > renders correctly with times from different minutes 1`] = `
<shiftview-popover-stub
  arearrowsenabled="false"
  canmoveleft="false"
  canmoveright="false"
  class="shiftview-pin-popover"
  data-v-bea15349=""
  disabled="false"
  dotcolor=""
  itemdisabled="[Function]"
  itemicon="[Function]"
  itemiconcolor="[Function]"
  items="[object Object],[object Object]"
  itemtext="[Function]"
  subtitle="12:00 - 12:01"
  targetel="[object HTMLDivElement]"
  title="Multiple events (2)"
  titleclass=""
  titleicon=""
/>
`;
